working on optimization and implementation